tenants/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:stable
          volumeMounts:
            - name: home-assistant-config
              mountPath: /config
            - name: ha-config-file
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: ha-config-file
          configMap:
            name: home-assistant-config
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
